[gd_scene load_steps=37 format=2]

[ext_resource path="res://medabots/flyer/wonder_angel/wonder_angel_legs.tscn" type="PackedScene" id=1]
[ext_resource path="res://medabots/flyer/wonder_angel/wonder_angel_head.tscn" type="PackedScene" id=2]
[ext_resource path="res://medabots/flyer/wonder_angel/wonder_angel_arm_l.tscn" type="PackedScene" id=3]
[ext_resource path="res://medabots/flyer/wonder_angel/wonder_angel_arm_r.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://medabots/humanoids/samurai/samurai_arm_l.tscn" type="PackedScene" id=6]
[ext_resource path="res://medabots/flyer/draken/draken_arm_r.tscn" type="PackedScene" id=7]
[ext_resource path="res://medabots/flyer/draken/draken_head.tscn" type="PackedScene" id=8]
[ext_resource path="res://medabots/flyer/noctobat/noctobat_head.tscn" type="PackedScene" id=9]
[ext_resource path="res://medabots/flyer/draken/draken_arm_l.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/tinpets.gd" type="Script" id=11]
[ext_resource path="res://scripts/camera.gd" type="Script" id=12]
[ext_resource path="res://medabots/flyer/noctobat/noctobat_arm_r.tscn" type="PackedScene" id=13]
[ext_resource path="res://medabots/humanoids/metabee/metabee_arm_r.tscn" type="PackedScene" id=14]
[ext_resource path="res://medabots/humanoids/metabee/metabee_head.tscn" type="PackedScene" id=15]
[ext_resource path="res://medabots/humanoids/metabee/metabee_arm_l.tscn" type="PackedScene" id=16]
[ext_resource path="res://medabots/humanoids/metabee/metabee_legs.tscn" type="PackedScene" id=17]
[ext_resource path="res://medabots/humanoids/samurai/samurai_head.tscn" type="PackedScene" id=18]
[ext_resource path="res://medabots/humanoids/samurai/samurai_legs.tscn" type="PackedScene" id=19]
[ext_resource path="res://medabots/flyer/noctobat/noctobat_legs.tscn" type="PackedScene" id=20]
[ext_resource path="res://medabots/humanoids/samurai/samurai_arm_r.tscn" type="PackedScene" id=21]
[ext_resource path="res://medabots/flyer/draken/draken_legs.tscn" type="PackedScene" id=22]
[ext_resource path="res://medabots/flyer/noctobat/noctobat_arm_l.tscn" type="PackedScene" id=23]
[ext_resource path="res://medabots/spider/digmole/digmole_arm_r.tscn" type="PackedScene" id=24]
[ext_resource path="res://medabots/spider/digmole/digmole_head.tscn" type="PackedScene" id=25]
[ext_resource path="res://medabots/spider/digmole/digmole_legs.tscn" type="PackedScene" id=26]
[ext_resource path="res://medabots/spider/digmole/digmole_arm_l.tscn" type="PackedScene" id=27]
[ext_resource path="res://medabots/spider/megaphant/megaphant_legs.tscn" type="PackedScene" id=28]
[ext_resource path="res://medabots/spider/megaphant/megaphant_arm_r.tscn" type="PackedScene" id=29]
[ext_resource path="res://medabots/spider/megaphant/megaphant_arm_l.tscn" type="PackedScene" id=30]
[ext_resource path="res://medabots/spider/megaphant/megaphant_head.tscn" type="PackedScene" id=31]
[ext_resource path="res://medabots/humanoids/cyandog/cyandog_arm_r.tscn" type="PackedScene" id=32]
[ext_resource path="res://medabots/humanoids/cyandog/cyandog_arm_l.tscn" type="PackedScene" id=33]
[ext_resource path="res://medabots/humanoids/cyandog/cyandog_head.tscn" type="PackedScene" id=34]
[ext_resource path="res://medabots/humanoids/cyandog/cyandog_legs.tscn" type="PackedScene" id=35]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.1781, 20.7568 )

[node name="World" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 60 )
current = true
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 0, 95 )
scale = Vector2( 27.9, 0.3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Floor"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape2D" parent="Floor"]
visible = false
shape = SubResource( 2 )

[node name="tinpet_angel" type="Node2D" parent="."]
position = Vector2( -38, -16 )
script = ExtResource( 11 )

[node name="pivot_arm_r" type="Position2D" parent="tinpet_angel"]
position = Vector2( 6, -6 )

[node name="wonder_angel_arm_r" parent="tinpet_angel/pivot_arm_r" instance=ExtResource( 4 )]

[node name="pivot_legs" type="Position2D" parent="tinpet_angel"]

[node name="wonder_angel_legs" parent="tinpet_angel/pivot_legs" instance=ExtResource( 1 )]

[node name="pivot_head" type="Position2D" parent="tinpet_angel"]

[node name="wonder_angel_head" parent="tinpet_angel/pivot_head" instance=ExtResource( 2 )]

[node name="pivot_arm_l" type="Position2D" parent="tinpet_angel"]
position = Vector2( -6, -6 )

[node name="wonder_angel_arm_l" parent="tinpet_angel/pivot_arm_l" instance=ExtResource( 3 )]

[node name="tinpet_metabee" type="Node2D" parent="."]
position = Vector2( -74, 60 )
script = ExtResource( 11 )
control = true

[node name="pivot_arm_r" type="Position2D" parent="tinpet_metabee"]
position = Vector2( 6, -6 )

[node name="metabee_arm_r" parent="tinpet_metabee/pivot_arm_r" instance=ExtResource( 14 )]

[node name="pivot_legs" type="Position2D" parent="tinpet_metabee"]

[node name="metabee_legs" parent="tinpet_metabee/pivot_legs" instance=ExtResource( 17 )]

[node name="pivot_head" type="Position2D" parent="tinpet_metabee"]

[node name="metabee_head" parent="tinpet_metabee/pivot_head" instance=ExtResource( 15 )]

[node name="pivot_arm_l" type="Position2D" parent="tinpet_metabee"]
position = Vector2( -6, -6 )

[node name="metabee_arm_l" parent="tinpet_metabee/pivot_arm_l" instance=ExtResource( 16 )]

[node name="tinpet_samurai" type="Node2D" parent="."]
position = Vector2( -143, 58 )
script = ExtResource( 11 )

[node name="pivot_arm_r" type="Position2D" parent="tinpet_samurai"]
position = Vector2( 6, -6 )

[node name="samurai_arm_r" parent="tinpet_samurai/pivot_arm_r" instance=ExtResource( 21 )]

[node name="pivot_legs" type="Position2D" parent="tinpet_samurai"]

[node name="samurai_legs" parent="tinpet_samurai/pivot_legs" instance=ExtResource( 19 )]

[node name="pivot_head" type="Position2D" parent="tinpet_samurai"]

[node name="samurai_head" parent="tinpet_samurai/pivot_head" instance=ExtResource( 18 )]

[node name="pivot_arm_l" type="Position2D" parent="tinpet_samurai"]
position = Vector2( -6, -6 )

[node name="samurai_arm_l" parent="tinpet_samurai/pivot_arm_l" instance=ExtResource( 6 )]

[node name="tinpet_cyandog" type="Node2D" parent="."]
position = Vector2( -24, 56 )
script = ExtResource( 11 )

[node name="pivot_arm_r" type="Position2D" parent="tinpet_cyandog"]
position = Vector2( 6, -6 )

[node name="cyandog_arm_r" parent="tinpet_cyandog/pivot_arm_r" instance=ExtResource( 32 )]

[node name="pivot_legs" type="Position2D" parent="tinpet_cyandog"]

[node name="cyandog_legs" parent="tinpet_cyandog/pivot_legs" instance=ExtResource( 35 )]

[node name="pivot_head" type="Position2D" parent="tinpet_cyandog"]

[node name="cyandog_head" parent="tinpet_cyandog/pivot_head" instance=ExtResource( 34 )]

[node name="pivot_arm_l" type="Position2D" parent="tinpet_cyandog"]
position = Vector2( -6, -6 )

[node name="cyandog_arm_l" parent="tinpet_cyandog/pivot_arm_l" instance=ExtResource( 33 )]

[node name="tinpet_draken" type="Node2D" parent="."]
position = Vector2( -191, -11 )
script = ExtResource( 11 )

[node name="pivot_arm_r" type="Position2D" parent="tinpet_draken"]
position = Vector2( 6, -6 )

[node name="draken_arm_r" parent="tinpet_draken/pivot_arm_r" instance=ExtResource( 7 )]

[node name="pivot_legs" type="Position2D" parent="tinpet_draken"]

[node name="draken_legs" parent="tinpet_draken/pivot_legs" instance=ExtResource( 22 )]

[node name="pivot_head" type="Position2D" parent="tinpet_draken"]

[node name="draken_head" parent="tinpet_draken/pivot_head" instance=ExtResource( 8 )]

[node name="pivot_arm_l" type="Position2D" parent="tinpet_draken"]
position = Vector2( -6, -6 )

[node name="draken_arm_l" parent="tinpet_draken/pivot_arm_l" instance=ExtResource( 10 )]

[node name="tinpet_noctobat" type="Node2D" parent="."]
position = Vector2( -117, -2 )
script = ExtResource( 11 )

[node name="pivot_arm_r" type="Position2D" parent="tinpet_noctobat"]
position = Vector2( 6, -6 )

[node name="noctobat_arm_r" parent="tinpet_noctobat/pivot_arm_r" instance=ExtResource( 13 )]

[node name="pivot_legs" type="Position2D" parent="tinpet_noctobat"]

[node name="noctobat_legs" parent="tinpet_noctobat/pivot_legs" instance=ExtResource( 20 )]

[node name="pivot_head" type="Position2D" parent="tinpet_noctobat"]

[node name="noctobat_head" parent="tinpet_noctobat/pivot_head" instance=ExtResource( 9 )]

[node name="pivot_arm_l" type="Position2D" parent="tinpet_noctobat"]
position = Vector2( -6, -6 )

[node name="noctobat_arm_l" parent="tinpet_noctobat/pivot_arm_l" instance=ExtResource( 23 )]

[node name="tinpet_digmole" type="Node2D" parent="."]
position = Vector2( -199, 65 )
script = ExtResource( 11 )

[node name="pivot_arm_r" type="Position2D" parent="tinpet_digmole"]
position = Vector2( 6, -6 )

[node name="digmole_arm_r" parent="tinpet_digmole/pivot_arm_r" instance=ExtResource( 24 )]

[node name="pivot_legs" type="Position2D" parent="tinpet_digmole"]

[node name="digmole_legs" parent="tinpet_digmole/pivot_legs" instance=ExtResource( 26 )]

[node name="pivot_head" type="Position2D" parent="tinpet_digmole"]

[node name="digmole_head" parent="tinpet_digmole/pivot_head" instance=ExtResource( 25 )]

[node name="pivot_arm_l" type="Position2D" parent="tinpet_digmole"]
position = Vector2( -6, -6 )

[node name="digmole_arm_l" parent="tinpet_digmole/pivot_arm_l" instance=ExtResource( 27 )]

[node name="tinpet_megaphant" type="Node2D" parent="."]
position = Vector2( -260, 64 )
script = ExtResource( 11 )

[node name="pivot_arm_r" type="Position2D" parent="tinpet_megaphant"]
position = Vector2( 6, -6 )

[node name="megaphant_arm_r" parent="tinpet_megaphant/pivot_arm_r" instance=ExtResource( 29 )]

[node name="pivot_legs" type="Position2D" parent="tinpet_megaphant"]

[node name="megaphant_legs" parent="tinpet_megaphant/pivot_legs" instance=ExtResource( 28 )]

[node name="pivot_head" type="Position2D" parent="tinpet_megaphant"]

[node name="megaphant_head" parent="tinpet_megaphant/pivot_head" instance=ExtResource( 31 )]

[node name="pivot_arm_l" type="Position2D" parent="tinpet_megaphant"]
position = Vector2( -6, -6 )

[node name="megaphant_arm_l" parent="tinpet_megaphant/pivot_arm_l" instance=ExtResource( 30 )]
